[gd_scene load_steps=9 format=3 uid="uid://cb5lh0m66sxsf"]

[ext_resource type="Script" uid="uid://bclynkkjs5mjj" path="res://entities/projectiles/projectile.gd" id="1_2utaj"]
[ext_resource type="Texture2D" uid="uid://dgl7l0bkqvwfp" path="res://assets/graphics/ui/tank_arrowFull.png" id="4_n3d54"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_yjiti"]
bounce = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i7x7j"]
radius = 8.0
height = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_eyncd"]
font_size = 21
font_color = Color(0.03137255, 0.023529412, 0.02745098, 1)
outline_size = 3

[sub_resource type="Animation" id="Animation_eyncd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PenetrationMarker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PenetrationMarker:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n3d54"]
resource_name = "view_damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PenetrationMarker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PenetrationMarker:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5990576, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.003921569)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k64t1"]
_data = {
&"RESET": SubResource("Animation_eyncd"),
&"view_damage": SubResource("Animation_n3d54")
}

[node name="Projectile" type="RigidBody2D"]
z_index = 2
physics_material_override = SubResource("PhysicsMaterial_yjiti")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_2utaj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_i7x7j")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="view" type="Sprite2D" parent="."]

[node name="PenetrationMarker" type="Sprite2D" parent="."]
position = Vector2(-50, 0)
scale = Vector2(0.6153846, 0.5)
texture = ExtResource("4_n3d54")

[node name="Label" type="Label" parent="PenetrationMarker"]
offset_left = -13.000001
offset_top = -16.0
offset_right = 39.000004
offset_bottom = 16.0
label_settings = SubResource("LabelSettings_eyncd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k64t1")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
